@@ -4,6 +4,8 @@ Development Progress	:
 ---------------------------
 
 2010-08-23 (CVS):
+    * cd_sdl.c: Updated -cddev argument parsing based on the code we added
+      to quakespasm.
     * cd_win.c: Added -cddev as a new command line option for choosing the
       cdrom drive to use. Syntax: -cddev <DriveLetter>
 
